--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,11 @@
 on: push
 name: 'Release Vscode Plugin'
 jobs:
-  npmInstall:
-    name: npm install
+  publish:
+    name: Publish
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: npm install
-        uses: actions/npm@master
-        with:
-          args: install --unsafe-perm
-      - name: Master
-        uses: actions/bin/filter@master
-        with:
-          args: branch master
+      - uses: actions/checkout
       - name: Vscode release plugin
         uses: JCofman/vscodeaction@master
         env:
